Added all the logic for the game. Also added a paragraph to display the game status, this way user can see who is the next player, if someone won, or game finished in a draw. Also added inputs so players can enter their name

--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,12 @@ h1 {
     margin-left: auto;
     margin-right: auto;
 }
+
+.row-div {
+    display: flex;
+    flex-direction: row;
+}
+
+label {
+    margin-right: 1rem;
+}
